Update on Overleaf.

--- a/CAdesc.tex
+++ b/CAdesc.tex
@@ -279,13 +279,12 @@ infrared excess: gail hoppe10
 \chapter{Schema di accrescimento componente solida}
 }
 
-
 \begin{figure}[!ht]
 \includegraphics[width=0.9\textwidth]{accretiontimeline}\caption{Rappresentazione schematica del processo di formazione protopianeti dalla polvere. Da \cite{perryman2011exoplanet}.}\label{fig:accretiontimeline}
 \end{figure}
 
 \begin{workout}[Refs GI vs CA]
-planetesimal hypoithesis: chamberlin 05, Safronov 69, Hayashi 77. Formation on dynamical scale via GI: Kuiper 51, Cameron 62.
+planetesimal hypothesis: chamberlin 05, Safronov 69, Hayashi 77. Formation on dynamical scale via GI: Kuiper 51, Cameron 62.
 Core accretion o instabilit\'a gravitazionale?
 La correlazione tra metallicit\'a del disco protoplanetario e il numero di pianeti (giganti) \'e in accordocon osservazioni?
 The runt of the litter: why planets formed through gravitational instability can only be failed binary stars (2010).
