da finire RV/T; modificato \ref/wrapfigure

--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -12,38 +12,49 @@ La Terra si \'e formata completamente circa \SI{100}{\mega\year} dopo i meteorit
 \includegraphics[trim={0cm 5cm 0 0cm},clip, width=0.9\textwidth]{Snebuladensity}\caption{Andamento minimum mass solar nebula (MMSN). Da \cite{weidenschilling1977distribution}.}\label{fig:Snebuladensity}
 \end{figure}
 
-Per stimare la massa del disco protoplanetario \cite{weidenschilling1977distribution} ha considerato la massa presente nei pianeti e nella fascia asteroidale arricchita di H/He per avere composizione solare: distribuendo questa massa in un anello di spessore proporzionale al raggio di Hill e centrato sulle orbite si ha l'andamento della densit\'a superficiale mostrato in \ref{fig:Snebuladensity}, $\sigma\propto r\expy{-3/2}$.
+Per stimare la massa del disco protoplanetario \cite{weidenschilling1977distribution} ha considerato la massa presente nei pianeti e nella fascia asteroidale arricchita di H/He per avere composizione solare: distribuendo questa massa in un anello di spessore proporzionale al raggio di Hill e centrato sulle orbite si ha l'andamento della densit\'a superficiale mostrato in figura \ref{fig:Snebuladensity}: $\Sigma\propto r\expy{-3/2}$.
 
 \begin{workout}[accrescimento di gas su nucleo solido prevede arricchimento di metalli ]
 
 \end{workout}
 
-La formazione per accrescimento di gas su nucleo solido prevede arricchimento di metalli rispetto alla composizione di partenza. Vincoli alla densit\'a sono imposti dalla misura dei momenti di multipolo del potenziale gravitazionale: risolvendo un modello di pianeta che rientri nei vincoli osservativi si determinano la massa del core e la metallicit\'a dell'inviluppo gassoso dei 4 pianeti gassosi (vedi  \ref{tab:JSUNcomp}).
+%La formazione per accrescimento di gas su nucleo solido prevede arricchimento di metalli rispetto alla composizione di partenza.
+Vincoli alla distribuzione di massa interna sono imposti dalla misura dei momenti di multipolo del potenziale gravitazionale: risolvendo un modello di pianeta che rientri nei vincoli osservativi si determinano la massa del core e la metallicit\'a dell'inviluppo gassoso dei 4 pianeti gassosi (vedi  tabella \ref{tab:JSUNcomp}).
 
 \begin{table}[!htb]
     \begin{minipage}{.5\linewidth}
       \centering
-        \begin{tabular}{ccc}
+        \begin{tabular}{|ccc|}
+\hline
 &\parbox{1.5cm}{Jupiter $317.8\mearth{}$}&\parbox{1.5cm}{Saturn $95.1\mearth{}$}\\
   $M_c$&$0-11\mearth{}$&$9-22\mearth{}$\\
+\hline
 $M_Z$&$1-39\mearth{}$&$1-8\mearth{}$\\
+\hline
 $M_Z^{tot}$&$8-39\mearth{}$&$13-28\mearth{}$\\
+\hline
 $Z/Z_{\odot}$&$1-6$&$6-14$\\
+\hline
  \end{tabular}
     \end{minipage}%
     \begin{minipage}{.5\linewidth}
       \centering
-        \begin{tabular}{ccc}
+        \begin{tabular}{|ccc|}
+\hline
 &\parbox{1.5cm}{Uranus $14.5\mearth{}$}&\parbox{1.5cm}{Neptune $17.1\mearth{}$}\\
+\hline
 $M_{rock}$&$3.7\mearth{}$&$4.2\mearth{}$\\
+\hline
 $M_{ice}$&$9.3\mearth{}$&$10.7\mearth{}$\\
+\hline
 $M_{H/He}$&$1.5\mearth{}$&$2.2\mearth{}$\\
+\hline
         \end{tabular}
     \end{minipage} 
     \caption{Composizione Giove, Saturno, Urano e Nettuno. Da \cite{baraffe2009physical}.}\label{tab:JSUNcomp}
 \end{table}
 
-Il modello di Nizza del sistema solare riproduce caratteristiche orbitali dei pianeti giganti considerando la loro migrazione in una distribuzione di planentesimi di $30-50\mearth{}$; la presenza di numerosa popolazione di planetesimi \'e corroborata dalla craterizzazionedei pianeti terrestri e corpi minori come dall'esistenza di numerosi oggetti di piccole dimensioni superstiti.
+Modelli pi\'u sofisticati impongono vincoli maggiori sulle condizioni iniziali: il modello di Nizza del sistema solare riproduce caratteristiche orbitali dei pianeti giganti considerando la loro migrazione in una distribuzione di planentesimi di $30-50\mearth{}$; la presenza di numerosa popolazione di planetesimi \'e corroborata dalla craterizzazionedei pianeti terrestri e corpi minori come dall'esistenza di numerosi oggetti di piccole dimensioni superstiti.
 
 \begin{workout}[Cosa dire dei modelli planetarii: core giganti gassosi: modelli planetari e raffronto isolation mass in MMSN]
 parte relativa ai momenti multipolo gravitazionale. 
@@ -138,7 +149,11 @@ Effects of inhomogenous infall on obliquity (tremaine 91, bate 10)
 \caption{Diagramma massa-distanza degli esopianeti in ''The extrasolar planet encyclopedia''. Rosso, celeste, magenta e verde sono pianeti rivelati tramite RV, T, osservazione diretta e microlensing. Da \cite{mordasini2018planetary}.}\label{fig:Maplot}
 \end{wrapfigure}
 
-La popolazione degli esopianeti osservata riflette quella reale tramite gli effetti di selezione dovuti alla probabilit\'a di rivelamento della tecnica/strumento particolari. Le osservazioni pi\'u numerose sono basate sull'osservazione della velocit\'a lungo la linea di vista dovuto al moto della stella attorno al baricentro del sistema stella pianeta (RV) o differenza nella luminosit\'a dovuto al transito del pianeta tra stella e osservatore (T).
+\begin{workout}[bias osservativi tecnica/strumento]
+La popolazione degli esopianeti osservata riflette quella reale tramite gli effetti di selezione dovuti alla probabilit\'a di rivelamento della tecnica/strumento particolari.
+\end{workout}
+
+Le osservazioni pi\'u numerose sono basate sull'osservazione della velocit\'a lungo la linea di vista dovuto al moto della stella attorno al baricentro del sistema stella pianeta (RV) o differenza nella luminosit\'a dovuto al transito del pianeta tra stella e osservatore (T). \'E evidente da \ref{fig:Maplot} che i pianeti extra-solari osservati riempono una vasta regione del diagramma $(a,M)$.
 
 \begin{workout}[bimodal radius distro is observed by transit?]
 Characterization of exoplanets from their formation II. The planetary mass-radius relationship pg 21: bimodal radius distribution
@@ -154,7 +169,7 @@ tab.1: occurrence and architecture exoplanetary system
 \item Coralie hot jupiter: giant planets $M\sin{i}>0.2\mjupiter$ and $a<0.1au$; $5.6\%$ giant out to 4au
 \item Lick/Keck/AAT ($M\sin{i}>0.5\mjupiter$): $1.2\%$ stars have hot jupiter and $6.6\%$ giant within 5 au
 \item ...
-\end{itemize}•
+\end{itemize}
 \end{workout}
 
 \section{Popolazione esopianeti rilevati tramite RV}
@@ -167,13 +182,38 @@ v_r=\dot{z}=K[\cos{(\omega+\nu)}+e\cos{\omega}]\label{eq:vrsignal}
 K=\frac{2\pi}{P}\frac{a_*\sin{i}}{(1-e^2)\expy{1/2}}=(\frac{2\pi G}{P})\expy{1/3}\frac{M_p\sin{i}}{(M_p+M_*)\expy{2/3}}\frac{1}{(1-e^2)\expy{1/2}}
 \end{equation}
 dove $K$ \'e la semi-ampiezza.
+
+\begin{errata}[Detection probability]
 Per probabilit\'a di rivelamento del $50\%$ la minima massa planetaria \'e
 \begin{equation}
 M_{p,min}\approx4\mearth{}(\frac{N}{20})\expy{-1/2}(\frac{\sigma}{\SI{1}{\meter\per\second}})(\frac{P}{\SI{1}{\day}})\expy{1/3}(\frac{M_*}{\msun{}})\expy{2/3}
 \end{equation}
 dove $\sigma$ tiene conto errori strumentali e rumore stellare.
-
+\end{errata}
 Per sistemi multipli consideriamo la sovrapposizione lineare di $n_p$ termini \eqref{eq:vrsignal}: viene sottratto il segnale Kepleriano dominante fino a che resta solo rumore.
+
+La probabilit\'a di rivelamento \'e determinata dall'ampiezza del moto radiale della stella attorno al centro di massa K, il rumore strumentale e stellare, la durata dell'osservazione e la forma dell'orbita.
+
+\begin{figure}[!ht]
+\begin{subfigure}[b]{0.33\textwidth}
+\includegraphics[trim={0cm 17cm 1cm 0},clip, width=0.99\textwidth]{PMfreq-e23}\label{fig:PMfreq-e23}
+\end{subfigure}
+~
+\begin{subfigure}[b]{0.33\textwidth}
+\includegraphics[trim={0cm 10cm 0 0},clip, width=0.99\textwidth]{PMfreq-e12}\label{fig:PMfreq-e12}
+\end{subfigure}
+~
+\begin{subfigure}[b]{0.33\textwidth}
+\includegraphics[trim={0cm 8cm 0 0},clip, width=0.99\textwidth]{PMfreq-short}\label{fig:PMfreq-short}
+\end{subfigure}
+\caption{Diagramma massa-periodo: frazione di stelle che ospitano pianeta con caratteristiche nella regione evidenziata. Da sinistra a destra: $P<10\si{\year}$ e $M>50\mearth{}$, $P<1\si{\year}$ e $M>3-100\mearth{}$, $P<50\si{\day}$ e $M=1-3/3-10/10-30/30-100/100-300/300-1000$. Da \cite{mayor2011harps}.}\label{fig:PMfreqs}
+\end{figure}
+
+\begin{workout}[HARPS low activity stars sample]
+mayor 11 fig 1
+\end{workout}
+
+I tre diagrammi \ref{fig:PMfreqs} mostrano la frequenza dei pianeti in delimitate regioni del diagramma periodo-massa ($P-M$)  ricavate da \cite{mayor2011harps} usando in camèione di stelle determinata utilizzando un sottocampione di stelle per cui la probabilit\'a di rivelazione relativa alla regione del diagramma $(P-M)$ \'e $99\%$: accanto alle linee continue nei diagrimmi $(P,M)$ sono indicate le percentuali di stelle per cui \'e possibile ottenere una probabilit\'a di rivelamento del $99\%$ nella regione superiore.
 
 \begin{figure}[!ht]
 \begin{subfigure}[b]{0.49\textwidth} \centering \includegraphics[trim={0cm 5cm 0 0},clip, width=0.94\textwidth]{freqvsM}
@@ -195,27 +235,15 @@ La \ref{fig:PfreqvsFeH} mostra l'assenza di correlazione tra la metallicit\'a de
 \end{subfigure}
 \end{figure}
 
-\begin{figure}[!ht]
-\begin{subfigure}[b]{0.3\textwidth}
-\includegraphics[trim={0cm 17cm 0 0},clip, width=0.9\textwidth]{PMfreq-e23}\label{fig:PMfreq-e23}
-\end{subfigure}
-~
-\begin{subfigure}[b]{0.3\textwidth}
-\includegraphics[trim={0cm 10cm 0 0},clip, width=0.9\textwidth]{PMfreq-e12}\label{fig:PMfreq-e12}
-\end{subfigure}
-~
-\begin{subfigure}[b]{0.3\textwidth}
-\includegraphics[trim={0cm 8cm 0 0},clip, width=0.9\textwidth]{PMfreq-short}\label{fig:PMfreq-short}
-\end{subfigure}
-\caption{Diagramma massa-periodo: frazione di stelle che ospitano pianeta con caratteristiche nella regione evidenziata. Da sinistra a destra: $P<10\si{\year}$ e $M>50\mearth{}$, $P<1\si{\year}$ e $M>3-100\mearth{}$, $P<50\si{\day}$ e $M=1-3/3-10/10-30/30-100/100-300/300-1000$. Da \cite{mayor2011harps}.}
-\end{figure}
-
+\begin{workout}[Spostamento picco superterre-aumento massa pianeti giganti all'aumentare del periodo]
 Una comprensione pi\'u ampia si ha studiando la distribuzione dei pianeti nel diagramma massa-periodo (M-P): elenco alcune caratteristiche della distribuzione dei pianeti osservati (da \cite{mayor2011harps}).
 \begin{itemize}
 \item Il picco della densit\'a di super-terre si sposta da $6\mearth{}$ a $10\mearth{}$ per periodi da \SI{10}{\day} a \SI{100}{day}
 %\item Non sono osservati pianeti fino a $50\mearth{}$ con $P>\SI{1000}{\day}$
 \item il pianeta gassoso pi\'u massiccio aumenta da $1\mjupiter{}$ a $15\mjupiter{}$ passando da $P\approx\SI{1}{\day}$ a $P\approx\SI{15}{\year}$.
 \end{itemize}
+\end{workout}
+
 
 \begin{workout}[Origin of metallicity excess: stellar structure]
 Pinsonneault depoy caffee 01
