--- a/seminario.bib
+++ b/seminario.bib
@@ -9,6 +9,18 @@ pages={1282},
   publisher={IOP Publishing}
 }
 
+@article{mayor1995jupiter,
+  title={A Jupiter-mass companion to a solar-type star},
+  author={Mayor, Michel and Queloz, Didier},
+  journal={Nature},
+  volume={378},
+  number={6555},
+  pages={355},
+  year={1995},
+  publisher={Nature Publishing Group}
+}
+
+
 @article{baraffe2009physical,
   title={The physical properties of extra-solar planets},
   author={Baraffe, Isabelle and Chabrier, Gilles and Barman, Travis},
