--- a/LocalF.sty
+++ b/LocalF.sty
@@ -66,6 +66,15 @@
 {\comment}{\endcomment}
 \fi
 
+\ifx \versione\bozza%%wrapfigure->figure
+\renewenvironment{wrapfigure}[3][]{\begin{figure}[!ht]}{\end{figure}}
+\fi
+
+\AtBeginDocument{%ref->(ref)
+\let\refold\ref
+\renewcommand{\ref}[1]{(\refold{#1})}
+}
+
 \renewcommand\cftappendixname{\appendixname~} %% Appendix ???
 
 \newcommand{\intxt}[1]{&\intertext{#1}\nonumber\\[\mathalignskip\normalbaselineskip]}
