--- a/main.tex
+++ b/main.tex
@@ -97,24 +97,37 @@
 \aliaspagestyle{chapter}{plain}
 \cleartorecto
 %%Intro
+
+\begin{errata}[primo pianeta attorno a stella singola solare di sequenza]
 Il crescente numero di esopianeti osservati ha stimolato lo studio dei processi di formazione dei sistemi planetari tramite modelli di formazione globale: 
 I modelli di formazione planetaria fino alla scoperta del primo esopianeta (Queloz 1995) erano vincolati a riprodurre le caratteristiche peculiari del sistema
+\end{errata}
+La comprensione dei meccanismi di formazione dei sistemi planetari \'e stata determinata dalla conoscenza delle caratteristiche orbitali, della composizione chimica dei corpi del sistema solare (\cite{lissauer1993planet}). A partire dalla scoperta del primo esopianeta attorno a stella di sequenza principale singola (\cite{mayor1995jupiter}), numerose campagne osservative hanno portato individuato una cospicua popolazione di esopianeti. Parallelamente per valutare le teorie di formazione alla luce delle osservazione sono stata sviluppate tecniche per simulare una popolazione planetaria a partire dalle condizioni iniziali osservate nei dischi protoplanetari.
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \part{Vincoli ai modelli di formazione planetaria}
 }
+\begin{errata}[tcniche osservative, effetti di selezione, diagrammi]
 Descrivo le tecniche osservative, le osservabili e effetti di selezione, quindi le propriet\'a degli esopianeti nei diagrammi $(a-M)$, $(a-R)$, $(M-R)$: quali osservabili determinano le diverse tecniche osservative, struttura pianeta (sistema solare, esopianeti).
+\end{errata}
+Lo schema di core accretion (CA) prevede la coagulazione della componente polverosa in embrioni planetari che, se abbastanza massicci sono in grado di accrescere il gas presente nel disco protoplanetario, mentre lo schema di formazione alternativo considera l'instabilit\'a gravitazionale del disco protoplanetario.
+
+Alcuni dati osservativi riguardo al sistema solare lasciano ipotizzare che il primo modello sia il canale di formazione preponderante per sistemi planetari attorno a stella singola di sequenza principale:
+\begin{itemize}
+\item arricchimento dei pianeti del sistema solare rispetto a composizione solare di metalli%(la composizione di Urano/Nettuno contiene $1\%$ di $H_2$, $He$ contenuto in pianeta di composizione solare con pari massa di metalli)
+\item ipotizzando una successiva rimozione della parte gassosa il pianeta deve avere il tempo di sedimentare la componente metallica
+\item Perch\'e si abbia instabilit\'a gravitazionale \'e necessario un disco di massa solare e i pianeti si formerebbero a distanza maggiore
+\item L'ultimo modello non spiega la formazione dei corpi minori
+\end{itemize}
+
 \input{PFMconstraints}
 \cleartorecto
 
 {\let\clearpage\relax\let\cleardoublepage\relax
 \part{Formazione sistemi planetari: descrizione modello core accretion}\label{part:CAdesc}
 }
-
-
 Il collasso di nube molecolare produce strutture appiattite la cui evoluzione \'e determinata dal trasporto di momento angolare verso l'esterno, l'interazione con l'oggetto centrale (campi magnetici vento stellare) e con l'ambiente circostante.
 L'ipotesi su cui si basano le simulazioni considerate \'e che la componente polverosa formi corpi pi\'u massicci fino a masse di frazioni di masse terrestri  ed eventualmente, per corpi sufficientemente massicci, accresca gas: lo scenario di core accretion (CA).
-
 \input{CAdesc}
 \cleartorecto
 
