--- a/seminario.bib
+++ b/seminario.bib
@@ -20,6 +20,13 @@ pages={1282},
   publisher={Nature Publishing Group}
 }
 
+@article{guillot2014giant,
+  title={Giant planets},
+  author={Guillot, Tristan and Gautier, Daniel},
+  journal={arXiv preprint arXiv:1405.3752},
+  year={2014}
+}
+
 
 @article{baraffe2009physical,
   title={The physical properties of extra-solar planets},
