--- a/PFMconstraints.tex
+++ b/PFMconstraints.tex
@@ -313,20 +313,27 @@ La probabilit\'a che l'orbita di un pianeta sia allineata con l'osservatore in m
 &p=(\frac{R_*\pm R_p}{a})(\frac{1}{1-e^2})=0.005(\frac{R_*}{\rsun{}})(\frac{a}{1AU})\expy{-1}(\frac{1}{1-e^2})
 \end{align*}
 La maggiore probabilit\'a di transito per orbite eccentriche \'e compensata approssimativamente dalla minore durata del transito.
-
-\begin{workout}[transiti: dectability and selection effects]
 Considerando un numero totale di osservazioni $N_o$ durante il transito si hanno $N_t\approx N_o\frac{R_*}{\pi a}$; il rapport segnale rumore \'e $S/N=\sqrt{N_t}\frac{\delta}{\sigma}$, $\sigma$ precisione fotometrica, $\sigma\propto\frac{1}{\sqrt{N_{ph}}}\propto d$. Per fissato S/N e tipo stellare il numero di pianeti rivelati varia come
 \begin{equation}
 V_p*P\propto d^3*\frac{R_*}{a}\propto R_p^6/P\expy{\frac{5}{3}}
 \end{equation}
-\end{workout}
+
 
 \begin{wrapfigure}[5]{0.49\textwidth}
-\centering \includegraphics[trim={0cm 8cm 0 0},clip, width=0.94\textwidth]{MR-model-obs}
-\caption{. Da \cite{}.}\label{fig:}
+\centering \includegraphics[trim={0cm 12cm 0 0},clip, width=0.94\textwidth]{MR-model-obs}
+\caption{Relazione massa-raggio determinata sulla base di modello planetario dopo \SI{5}{\giga\year}. Per gli esopianeti sono indicate le curve per temperature di equilibrio di \SI{1000}{\kelvin} e \SI{2500}{\kelvin}. Da \cite{guillot2014giant}.}\label{fig:MR-model-obs}
 \end{wrapfigure}
 
-La posizione di un pianeta nel diagramma massa-raggio \'e determinata dalla densit\'a media quindi dalla storia di accrescimento del pianeta (pianeta roccioso, pianeta costituito in parte da ghiacci, pianeta con massa consistente di gas), dal bilancio termico, e propriet\'a di H/He e metalli a alte densit\'a (rottura H molecolare, ionizzazione da pressione, degenerazione elettronica, transizioni di fase).
+Nel caso un pianeta osservato tramite transito abbia massa nota \'e possibile determinarne la struttura interna tramite un modello planetario: La posizione di un pianeta nel diagramma massa-raggio \'e determinata dalla storia di accrescimento del pianeta (pianeta roccioso, pianeta costituito in parte da ghiacci, pianeta con massa consistente di gas), dal bilancio termico, e propriet\'a di H/He e metalli a alte densit\'a (rottura H molecolare, ionizzazione da pressione, degenerazione elettronica, transizioni di fase). La figura \ref{fig:MR-model-obs} mostra la relazione massa-raggio per pianeti nettuniani fino a regimi stellari. Considerando l'equazione di stato
+\begin{equation}
+P\propto\rho\expy{\gamma},\ \gamma=\frac{1}{n}+1
+\end{equation}
+la relazione massa raggio \'e
+\begin{equation}
+R\propto M\expy{(1-n)/(3-n)}
+\end{equation}
+per $M\approx\mjupiter$ $n\approx1$ quindi il raggio \'e approssimativamente costante. Questo fatto \'e visibile anche nella distribuzione dei raggi planetari (figura \subref{fig:Rfreq}) nel picco attorno a $\rjupiter$.
+La figura \subref{fig:RfreqPl100ub} mostra due picchi nella distribuzione radiale a $1.3\rearth{}$ e $2.4\rearth{}$ dovuti alle sottopopolazioni di pianeti rocciosi e gassosi per $P<\SI{100}{\day}$.
 
 \begin{errata}[Equazione di stato politropa: relazione massa raggio]
 \begin{equation}
@@ -339,8 +346,8 @@ R\propto M\expy{(1-n)/(3-n)}
 \end{equation}
 \end{errata}
 
-\begin{figure}[!ht] \centering\includegraphics[trim={0cm 14cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{MRD}\caption{Diagramma mass-raggio per pianeti di transito. Le curve tratteggiate sono a densit\'a costante. Il simbolo $\circ$ indica i pianeti del sistema solare. Da \cite{perryman2011exoplanet}.}\label{fig:MRD}
-\end{figure}
+%\begin{figure}[!ht] \centering\includegraphics[trim={0cm 14cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{MRD}\caption{Diagramma mass-raggio per pianeti di transito. Le curve tratteggiate sono a densit\'a costante. Il simbolo $\circ$ indica i pianeti del sistema solare. Da \cite{perryman2011exoplanet}.}\label{fig:MRD}
+%\end{figure}
 
 %\includegraphics[trim={0cm 0 0 0},clip, keepaspectratio,width=0.9\textwidth]{freqvsRpl50d}\label{freqvsRpl50d}\caption{Da \cite{howard2012planet}}
 % \includegraphics[trim={0cm 0 0 0},clip,width=0.95\textwidth]{keplerRfreq}\label{fig:keplerRfreq} \caption{Da \cite{fressin2013false}}
@@ -350,7 +357,7 @@ R\propto M\expy{(1-n)/(3-n)}
 \begin{subfigure}[b]{0.49\textwidth} \centering \includegraphics[trim={0 12cm 0 0},clip, width=0.95\textwidth]{RfreqPl100ub} 
 \label{fig:RfreqPl100ub}\subcaption{Distribuzione per i pianeti osservati tramite transito con $P<\SI{100}{\day}$: la valle a $1.7\mearth{}$ si ipotizza causato dall'evaporazione. Da \cite{fulton2017california}.} \end{subfigure}
 ~
-\begin{subfigure}[b]{0.49\textwidth} \centering\includegraphics[trim={0cm 2.5cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{Rfreq}\label{Rfreq}\subcaption{Distribuzione radiale pianeti rivelati tramite T (da \cite{exoplanet.eu} (luglio 2018): la frequenza ha andamento crescente verso pianeti di raggio terrestre, andamento piatto tra $4-10\rearth{}$ e picco a $R\approx\rjupiter{}$.}
+\begin{subfigure}[b]{0.49\textwidth} \centering\includegraphics[trim={0cm 2.5cm 0 0},clip, keepaspectratio,width=0.9\textwidth]{Rfreq}\label{fig:Rfreq}\subcaption{Distribuzione radiale pianeti rivelati tramite T. Da \cite{exoplanet.eu} (luglio 2018): la frequenza ha andamento crescente verso pianeti di raggio terrestre, andamento piatto tra $4-10\rearth{}$ e picco a $R\approx\rjupiter{}$.}
 \end{subfigure}
 \end{figure}
 
@@ -372,7 +379,6 @@ Local maximum at $1\mjupiter{}$, flat distro in log(r) between $4-10\mearth{}$ b
 characterization of exoplanets from formation: MR relation pg 18
 formazione: vedi \ref{ch:gasaccretion}
 MR diagram chabrier 09 (perryman 143)
-
 \end{workout}
 
 \begin{workout}[KEPLER MULTI-PLANET SYSTEM]
