--- a/main.tex
+++ b/main.tex
@@ -116,8 +116,8 @@ Alcuni dati osservativi riguardo al sistema solare lasciano ipotizzare che il pr
 \begin{itemize}
 \item arricchimento dei pianeti del sistema solare rispetto a composizione solare di metalli%(la composizione di Urano/Nettuno contiene $1\%$ di $H_2$, $He$ contenuto in pianeta di composizione solare con pari massa di metalli)
 \item ipotizzando una successiva rimozione della parte gassosa il pianeta deve avere il tempo di sedimentare la componente metallica
-\item Perch\'e si abbia instabilit\'a gravitazionale \'e necessario un disco di massa solare e i pianeti si formerebbero a distanza maggiore
-\item L'ultimo modello non spiega la formazione dei corpi minori
+\item perch\'e si abbia instabilit\'a gravitazionale \'e necessario un disco di massa solare e i pianeti si formerebbero a distanza maggiore
+\item I corpi minori non sono spiegati da instabilit\'a gravitazionale
 \end{itemize}
 
 \input{PFMconstraints}
